# cwmc

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  GPT4O_INTEGRATION.md  Makefile  PR_TEMPLATE.md  README.md  USAGE_GUIDE.md  check_setup.py  config.example.yaml  config.yaml  pyproject.toml  test_audio_chain.py  test_full_system.py  test_gemini_transcription.py  test_kb_ui.py  test_qa_only.py  test_whisper_direct.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  LOCAL_MODELS_RESEARCH.md  ROADMAP.md
docs/archive/: MICROPHONE_SETUP.md  fix_audio_setup.md
docs/development/: CLAUDE.md
scripts/: check-env.sh  common.sh  configure-audio-device.sh  configure-linux.sh  configure-macos.sh  configure-windows.sh  configure.sh  dev-run.sh  dev.sh  list-audio-devices.sh  quick-setup.sh  restart.sh  run.sh  start.sh  status.sh  stop.sh  test-venv.sh
src/livetranscripts/: __init__.py  api_key_manager.py  audio_capture.py  batching.py  config.py  gemini_integration.py  knowledge_base.py  live_qa.py  main.py  server.py  web_interface.html  whisper_integration.py
src/livetranscripts/audio_backends/: __init__.py  base.py  pipewire_backend.py  pulseaudio_backend.py  pyaudio_backend.py  registry.py  (+1 more)
tests/: __init__.py  conftest.py  test_api_key_manager.py  test_api_key_websocket.py  test_audio_capture.py  test_batching.py  test_gemini_integration.py  test_gemini_kb_integration.py  test_gpt4o_integration.py  test_kb_multi_record.py  test_knowledge_base.py  test_live_qa.py  test_recording_default_state.py  test_transcription_manager.py  test_whisper_integration.py
(+6 files in other folders)
