[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livetranscripts"
version = "0.1.0"
description = "Live meeting transcription and interaction system"
authors = [{name = "LiveTranscripts", email = "dev@livetranscripts.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyaudio>=0.2.11",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "fastapi>=0.104.0",
    "websockets>=12.0",
    "uvicorn>=0.24.0",
    "numpy>=1.24.0",
    "asyncio-throttle>=1.0.2",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true